<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_margin="16dp"/>
    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/hint_username"
        android:hint="@string/hint_username"
        android:inputType="textEmailAddress"
        android:layout_margin="16dp"
        android:minHeight="48dp" />
    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/hint_password"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:layout_margin="16dp"
        android:minHeight="48dp" />
    <Button
        android:id="@+id/login_button"
        android:text="@string/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:minHeight="48dp" />
    <TextView
        android:id="@+id/login_register_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_link"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="#0000FF"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"/>
</LinearLayout>